[gd_scene load_steps=6 format=2]

[ext_resource path="res://Source/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/Main/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Audio/hover.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Fonts/Retro Gaming.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ResultLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -221.5
margin_right = 221.5
margin_bottom = 217.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "A tie!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -64.0
margin_right = 71.0
margin_bottom = 64.0
alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 142.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "Play Again"

[node name="StartMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 142.0
margin_bottom = 74.0
theme = ExtResource( 2 )
text = "Start Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 142.0
margin_bottom = 99.0
theme = ExtResource( 2 )
text = "Quit"
